<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bloodshare.bloodshareandroid.ui.post.BloodSeekFragment">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/autoCompleteInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hospital_location"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/hospitalAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/blood_quantity"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bloodSpinner2"
            app:layout_constraintTop_toBottomOf="@id/autoCompleteInputLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <com.bloodshare.bloodshareandroid.ui.custom.BloodSpinner
            android:id="@+id/bloodSpinner2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_when_blood_need"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:text="@string/title_when_blood_need" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bloodNeedDateInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/date_of_birth"
            app:layout_constraintEnd_toStartOf="@+id/bloodNeedDatePickerImageView"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bloodNeedDateInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/bloodNeedDatePickerImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:layout_constraintBottom_toBottomOf="@+id/bloodNeedDateInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/bloodNeedDateInputLayout" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/seek"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/bloodNeedDateInputLayout" />
    </android.support.constraint.ConstraintLayout>
</layout>

